# GFXTest2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
shaders/: fragment.frag  vertex.vert
src/: main.cpp  shaderLoader.cpp  shaderLoader.hpp
